[gd_scene load_steps=7 format=3 uid="uid://b8bee4w1vd5ck"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_6ouec"]
[ext_resource type="Theme" uid="uid://cyt67yifc08fx" path="res://pusholo_theme.tres" id="2_e0n63"]
[ext_resource type="Shader" path="res://shaders/main_menu.gdshader" id="2_xpbft"]
[ext_resource type="Texture2D" uid="uid://bjp7g4untvp5x" path="res://textures/pattern_14.png" id="3_evl5l"]
[ext_resource type="AudioStream" uid="uid://c6sdq3h83d80h" path="res://assets/laserSmall_000.ogg" id="5_a6bok"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n63y6"]
shader = ExtResource("2_xpbft")
shader_parameter/scroll_speed = 0.03
shader_parameter/angle_degrees = 33.0
shader_parameter/repeat_x = 10.0
shader_parameter/repeat_y = 10.0
shader_parameter/tint = Color(1, 1, 1, 0.239216)

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ouec")

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 100
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -62.0
offset_right = 47.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
auto_translate_mode = 2
clip_contents = true
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 4.0
theme_override_constants/separation = 20

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music"

[node name="Music" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Music"
theme = ExtResource("2_e0n63")
min_value = -30.0
max_value = 0.0

[node name="SFXlabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SFX"

[node name="SFX" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e0n63")
min_value = -30.0
max_value = 0.0

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_e0n63")
theme_override_font_sizes/font_size = 40
button_mask = 3
text = "Back"

[node name="Background" type="Node" parent="."]

[node name="ParalaxBG" type="TextureRect" parent="Background"]
show_behind_parent = true
z_index = 10
material = SubResource("ShaderMaterial_n63y6")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.000324143
mouse_filter = 2
texture = ExtResource("3_evl5l")
stretch_mode = 6

[node name="GoalSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_a6bok")
volume_db = -8.0
bus = &"SFX"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
